--- a/src/style/_topbar.scss
+++ b/src/style/_topbar.scss
@@ -1,6 +1,7 @@
 .topbar
 {
     padding: 8px 0;
+    height: 80px;
 
     background-color: $topbar-background-color;
     .topbar-wrapper
@@ -17,16 +18,33 @@
         align-items: center;
         flex: 1;
 
-        max-width: 300px;
-
         text-decoration: none;
 
         @include text_headline($topbar-link-font-color);
+        font-size: 40px;
+        margin-top: 10px;
 
         span
         {
             margin: 0;
             padding: 0 10px;
+        }
+    }
+
+    ul.links {
+        position: absolute;
+        right: 15px;
+        top: -5px;
+        list-style: none;
+        font-size: 12px;
+
+        li {
+            margin:15px;
+
+            a {
+                font-size:17px;
+                margin-top:0px;
+            }
         }
     }
 
