--- a/src/style/_type.scss
+++ b/src/style/_type.scss
@@ -1,6 +1,6 @@
 @mixin text_body($color: $text-body-default-font-color)
 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     color: $color;
 }
@@ -15,7 +15,8 @@
 
 @mixin text_headline($color: $text-headline-default-font-color)
 {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 
     color: $color;
 }
