Add new documentation pages
Includes:

1. a "guides" page which links to 9 other docs.
2. adds the link to the spec, dashboard and guides to the header
3. adds docs for throttling, timestamps, paging, order syncing,
inventory integrations and 3pl integrations.

see: https://github.com/hdtradeservices/etp/issues/10768
see: https://github.com/hdtradeservices/etp/issues/9927

--- a/pages/template.hbs
+++ b/pages/template.hbs
@@ -47,7 +47,11 @@
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class="swagger-ui">
-  <div class="topbar"><div class="wrapper"><div class="topbar-wrapper"><a href="#" class="link"><span>Zentail Developer Portal</span></a><ul class="links"><li><a href="https://www.zentail.com/user/dashboard">Log In</a></li></ul></div></div></div>
+  <div class="topbar"><div class="wrapper"><div class="topbar-wrapper"><a href="#" class="link"><span>Zentail Developer Portal</span></a><ul class="links">
+    <li><a href="https://developer.zentail.com/">API Specification</a></li>
+    <li><a href="https://developer.zentail.com/pages/guides.html">API Guides</a></li>
+    <li><a href="https://app.zentail.com/user/dashboard">Log In</a></li>
+  </ul></div></div></div>
 
   <div class="swagger-ui wrapper info main-wrapper">
     <section>
