--- a/src/style/_topbar.scss
+++ b/src/style/_topbar.scss
@@ -37,9 +37,11 @@
         top: -5px;
         list-style: none;
         font-size: 12px;
+        width: 400px;
 
         li {
             margin:15px;
+            float:left;
 
             a {
                 font-size:17px;
