--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,5 +16,13 @@
     @import 'errors';
     @include text_body();
     @import 'split-pane-mode';
-    @import '../../node_modules/highlight.js/styles/zenburn.css'
+    @import '../../node_modules/highlight.js/styles/zenburn.css';
+
+
+    li.tabitem a[data-name="example"],
+    li.tabitem a[data-name="model"] {
+        font-size: 24px;
+        text-decoration: underline;
+        margin-right:15px;
+    }
 }
